app/root/root.css
/* ... */
@media (min-width: 801px) {
  .login-hero {
    border-right: 1px solid rgba(255, 255, 255, 0.5);
    padding-right: 32px;
    margin-right: 32px;
    max-width: 40%;
  }
}

@media (max-width: 800px) {
  .hide-on-mobile {
    display: none !important;
  }

  .login-box {
    flex-direction: column;
  }

  .login-hero {
    padding: 24px;
    text-align: center;
  }

  .login-buttons {
    padding: 0 8px;
  }
}

/** Grid **/

.grid {
  margin-top: 24px;
  display: flex;
  flex-wrap: wrap;
}

.grid-grow .grid-block {
  flex-grow: 1;
}

.grid-block {
  display: block;
  min-width: 16px;
  height: 16px;
  margin-right: 2px;
  margin-bottom: 2px;
  border-radius: 2px;
  flex-shrink: 0;
  box-sizing: border-box;
}

.grid-block-success {
  background-color: #8bc34a;
}

.grid-block-failure {
  background-color: #f44336;
}

.grid-block-neutral {
  background-color: #888;
}

.grid-block-disconnected {
  background-color: #aaa;
}

.grid-block-in-progress {
  background-color: #03a9f4;
}

.grid-block-success:hover {
  background-color: #7cb342;
}

.grid-block-failure:hover {
  background-color: #e53935;
}

.grid-block-neutral:hover {
  background-color: #666;
}

.grid-block-disconnected:hover {
  background-color: #bbb;
}

.grid-block-in-progress:hover {
  background-color: #039be5;
}

/** Dense mode **/

.dense .container {
  max-width: 100%;
  padding: 0 16px;
}

.dense .nopadding-dense {
  padding: 0;
}

.dense .shelf {
  padding: 16px 0;
  border-bottom: 0;
}

.dense .menu {
  height: 64px;
}

.dense .menu .title img {
  height: 32px;
}

.dense .grid {
  padding: 0 16px;
  margin-bottom: 8px;
}

.dense .empty-state {
  padding: 0;
}

.dense .tabs {
  margin: 0;
}

.dense .filter {
  border-radius: 0;
  margin-top: 0;
  height: 36px;
}

.dense .tab {
  margin-top: 0;
  padding: 12px 16px;
  border: 0;
  box-shadow: none;
  border-radius: 0;
  color: #444;
}

.dense .tab.selected {
  background-color: transparent;
  color: #616161;
  position: relative;
}

.dense .tab.selected:after {
  display: block;
  content: " ";
  background-color: #616161;
  height: 4px;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
}

.dense .card {
  margin: 0;
  border-radius: 0;
  padding: 16px;
  box-shadow: none;
  border-top: 1px solid #eee;
}

.dense .card.card-hover {
  margin-top: 4px;
  border-radius: 8px;
  border-top: 0;
  box-shadow:
    0px 1px 4px rgba(0, 0, 0, 0.1),
    0px 1px 6px rgba(0, 0, 0, 0.05);
}

.dense .card .details {
  margin-top: 0px;
}

.dense .card > .icon,
.dense .card .title .icon {
  display: none;
}

.dense .list-grid div:first-of-type {
  font-weight: 400;
}

.dense .list-grid div:last-of-type {
  color: #888;
}

.dense .card .target-status-icon.target-status-icon {
  flex-grow: 0;
  display: initial;
  width: 16px;
}

.dense .card .target-status-icon .icon {
  display: initial;
  width: 16px;
  padding-top: 0;
}

.dense-invocation {
  padding: 8px 16px;
}

.dense-invocation-title {
  font-weight: 700;
  font-size: 12px;
}

.dense-invocation-status-bar {
  border-top: 4px solid #888;
  background-color: #eee;
  padding: 4px 16px;
  display: flex;
  justify-content: space-between;
}

.dense-invocation-status-bar.success {
  border-top: 4px solid #8bc34a;
  background-color: #e8f5e9;
}

.dense-invocation-status-bar.failure {
  border-top: 4px solid #f44336;
  background-color: #ffebee;
}

.dense-invocation-status-bar.in-progress {
  border-top: 4px solid #03a9f4;
  background-color: #e3f2fd;
}

.dense-invocation-status-bar.disconnected {
  border-top: 4px solid #aaa;
  background-color: #eee;
}

.dense-invocation-status-bar.neutral {
  border-top: 4px solid #888;
  background-color: #eee;
}

.dense-invocation-overview-grid {
  display: flex;
  background-color: #fff;
  overflow: auto;
}

.dense-invocation-overview-grid-chunk {
  flex-grow: 1;
  padding: 8px 16px;
  border-right: 1px solid #eee;
}

.dense-invocation-overview-grid-value {
  font-size: 20px;
  font-weight: 600;
  display: flex;
  align-items: center;
}

.dense-invocation-overview-grid-value .icon {
  margin-right: 8px;
}

.dense .load-more {
  margin-bottom: 0;
  border-radius: 0;
}

.dense .history .card .title {
  font-size: 20px;
}

.dense .detail {
  margin-top: 4px;
}

/* Scrollbars */

.root-main {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  overflow: auto;
  background-color: #fff;
}

.root-code,
.root-login {
  overflow-y: initial;
}

.content {
  flex-grow: 1;
}

@keyframes rotate {
  to {
    transform: rotate(360deg);
  }
}

.sticky-loading-overlay {
  position: sticky;
  top: 0;
  z-index: 1;
}

.loading {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-grow: 1;
}

.loading:not(.loading-slim) {
  height: 100%;
}

.sticky-loading-overlay .loading {
  height: 100vh;
  position: absolute;
  background: #fffc;
}

.loading:before {
  content: "";
  display: block;
  animation: rotate 2s linear infinite;
  width: 32px;
  height: 32px;
  opacity: 0.8;
  background-image: url("/image/loader.svg");
  background-size: cover;
}

.loading.loading-dark {
  background: #212121;
}

.loading.loading-dark-terminal {
  background: #212121;
}

.loading.loading-dark:before,
.loading.loading-dark-terminal:before {
  background-image: url("/image/loader-white.svg");
}

.copy-icon {
  color: #888;
  cursor: pointer;
  height: 0.8em;
  width: 0.8em;
  margin-left: 0.2em;
}

.copy-icon.green {
  color: #4caf50;
}

.coverage-percent {
  font-weight: 700;
}

.coverage-details {
  color: #aaa;
}

.coverage-record-total {
  border-top: 1px solid #eee;
  padding-top: 8px;
  margin-top: 8px;
}

.coverage-total-label {
  font-weight: 600;
}

